# justmytype-essentials

./: .gitignore  LICENSE  README.md  justfile  plan.md  pyproject.toml
pack-tools/: README.md  pyproject.toml
pack-tools/src/justmytype_pack_tools/: __init__.py  cli.py  config.py  download.py  filesystem.py  font_assets_gen.py  github_api.py  licenses.py  manifest.py  metadata.py  pipeline.py  readme.py
pack-tools/src/justmytype_pack_tools/templates/: readme.md.j2
pack-tools/tests/: __init__.py  test_font_assets_gen.py  test_manifest.py
packs/international/: README.md  pyproject.toml
packs/international/src/justmytype_international/: __init__.py
packs/intl-africa/: README.md  pyproject.toml  upstream.toml
packs/intl-africa/src/justmytype_intl_africa/: __init__.py
packs/intl-africa/src/justmytype_intl_africa/fonts/: pack_manifest.json
packs/intl-cjk/: README.md  pyproject.toml  upstream.toml
packs/intl-cjk/src/justmytype_intl_cjk/: __init__.py
packs/intl-cjk/src/justmytype_intl_cjk/fonts/: pack_manifest.json
packs/intl-rtl/: README.md  pyproject.toml  upstream.toml
packs/intl-rtl/src/justmytype_intl_rtl/: __init__.py
packs/intl-rtl/src/justmytype_intl_rtl/fonts/: pack_manifest.json
packs/intl-sea/: README.md  pyproject.toml  upstream.toml
packs/intl-sea/src/justmytype_intl_sea/: __init__.py
packs/intl-sea/src/justmytype_intl_sea/fonts/: pack_manifest.json
packs/intl-south-asia/: README.md  pyproject.toml  upstream.toml
packs/intl-south-asia/src/justmytype_intl_south_asia/: __init__.py
packs/intl-south-asia/src/justmytype_intl_south_asia/fonts/: pack_manifest.json
packs/western-core/: README.md  pyproject.toml  upstream.toml
packs/western-core/src/justmytype_western_core/: __init__.py
packs/western-core/src/justmytype_western_core/fonts/: pack_manifest.json
