[project]
name = "justmytype-pack-tools"
version = "0.2.0"
description = "Build tools for creating JustMyType font packs"
authors = [
    {name = "Kaj Siebert", email = "kaj@k-si.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "fonttools>=4.0.0",
    "jinja2>=3.1",
    "justmytype>=0.4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
pack-tools = "justmytype_pack_tools.cli:main"

[project.urls]
Homepage = "https://github.com/kws/justmytype-essentials/tree/main/pack-tools"
Repository = "https://github.com/kws/justmytype-essentials"
Issues = "https://github.com/kws/justmytype-essentials/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=7.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/justmytype_pack_tools"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
