[project]
name = "justmytype-international"
version = "0.1.0"
description = "Meta-pack: Western core + international font packs (excluding CJK). Install for broad coverage; add justmytype-intl-cjk separately for East Asian."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kaj Siebert", email = "kaj@k-si.com"}
]
requires-python = ">=3.10"
dependencies = [
    "justmytype-western-core",
    "justmytype-intl-rtl",
    "justmytype-intl-south-asia",
    "justmytype-intl-sea",
    "justmytype-intl-africa",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/justmytype_international"]
