[project]
name = "justmytype-intl-rtl"
version = "0.1.0"
description = "JustMyType pack: RTL scripts (Noto Sans Arabic, Noto Sans Hebrew)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kaj Siebert", email = "kaj@k-si.com"}
]
requires-python = ">=3.10"
dependencies = ["justmytype>=0.3.0"]

[project.entry-points."justmytype.packs"]
intl-rtl = "justmytype_intl_rtl:get_font_pack"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/justmytype_intl_rtl"]
# fonts/ and pack_manifest.json (under fonts/) are included as part of the package dir
