[project]
name = "justmytype-western-core"
version = "0.1.0"
description = "JustMyType pack: Western core fonts (Inter, Noto Sans, Source Serif 4, etc.)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kaj Siebert", email = "kaj@k-si.com"}
]
requires-python = ">=3.10"
dependencies = ["justmytype>=0.3.0"]

[project.entry-points."justmytype.packs"]
western-core = "justmytype_western_core:get_font_pack"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/justmytype_western_core"]
# fonts/ and pack_manifest.json (under fonts/) are included as part of the package dir
